--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "antdv-pro/antdv-pro",
   "scripts": {
     "dev:admin": "vite",
-    "dev": "run-p dev:admin dev:mock",
+    "dev": "vite",
     "dev:mock": "pnpm -F servers dev",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
